--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,18 +1,18 @@
 {
-	"background_color": "#ffffff",
-	"theme_color": "#333333",
-	"name": "TODO",
-	"short_name": "TODO",
+	"background_color": "#010006",
+	"theme_color": "#0F0E0E",
+	"name": "Technozaure World 2021",
+	"short_name": "TZ World 2021",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "logo-192.png",
+			"src": "logos/logo-zenika-192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "logo-512.png",
+			"src": "logos/logo-zenika-512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
