--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,8 @@
 {
 	"background_color": "#010006",
 	"theme_color": "#0F0E0E",
-	"name": "Technozaure World 2021",
-	"short_name": "TZ World 2021",
+	"name": "Technozaure Nantes 2022 #1",
+	"short_name": "TZ Nantes 2022 #1",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
