feat(tz-lyon): update site to match tz-lyon

--- a/app.yaml
+++ b/app.yaml
@@ -12,4 +12,4 @@ handlers:
   secure: always
 
 # cp app.yaml __sapper__/export
-# gcloud app deploy --project tz-nantes --version v1 __sapper__/export/
+# gcloud app deploy --project tz-lyon --version v1 __sapper__/export/
